@@ -1415,6 +1415,7 @@ options.mouse.dragAndDrop=Drag and drop in text area
 options.mouse.joinNonWordChars=Double-click drag joins non-alphanumeric characters
 options.mouse.middleMousePaste=Quick copy using middle mouse button
 options.mouse.ctrlForRectangularSelection=Switch to rectangular selection while Ctrl is pressed
+options.mouse.singleClickToOpen=Single-click to open files and folders
 options.mouse.gutter.foldClick=Click in gutter:
 options.mouse.gutter.SfoldClick=Shift-click in gutter:
 options.mouse.gutter.toggle-fold=Collapse/expand fold
@@ -1505,6 +1506,7 @@ options.shortcuts.label=Shortcuts
 options.shortcuts.select.label=Edit Shortcuts:
 options.shortcuts.select.tooltip=You can select globals, macros, or plugin shortcuts
 options.shortcuts.name=Command
+options.shortcuts.actionset=Action set
 options.shortcuts.shortcut1=Primary shortcut
 options.shortcuts.shortcut2=Alternative shortcut
 options.shortcuts.filter.label=Filter:
