@@ -15,6 +15,9 @@ Thanks to Björn "Vampire" Kautler, Matthieu Casanova and Alan Ezust for
 }}}
 {{{ Miscellaneous
 
+ - Added a new column "ActionSet" in Shortcuts option pane to know
+   to which actionSet an action belong (feature #3614386 Matthieu Casanova)
+
  - Increased the scrolling speed in option pane (Matthieu Casanova)
 
 }}}
